--- a/PM/认识产品.md
+++ b/PM/认识产品.md
@@ -15,3 +15,6 @@
 手：当你手里只有解决方案的时候，用户是享受不到你的产品所提供的解决方案，因为你的产品还没有，所以你要把你的解决方案和用户连接起来，实现你的产品。
 
 心： 此处理解应该有两颗心，两颗同理心。第一颗**感受用户需求的同理心**，这颗心可以帮助你的眼睛更加准确的找到需求点，去抢占蓝海市场。第二课**感受用户体验的同理心**，这颗心可以让你感受到用户用的到底爽不爽，去在红海时长吸引用户。
+
+## 产品流程
+![](fig/bf506e882c694907bfa2137f4e462cd1.jpeg)
